# pycon-sg-demo

./: README.md
nike-crawler/: README.md  pyproject.toml  shoes.csv
nike-crawler/.actor/: Dockerfile  actor.json  input_schema.json
nike-crawler/nike_crawler/: main.py  routes.py
nike-crawler/storage/datasets/default/: 000000001.json  000000002.json  000000003.json  000000004.json  000000005.json  000000006.json  000000007.json  000000008.json  000000009.json  000000010.json  000000011.json  000000012.json  000000013.json  000000014.json  000000015.json  000000016.json  000000017.json  000000018.json  000000019.json  000000020.json  000000021.json  000000022.json  000000023.json  000000024.json  000000025.json  000000026.json  000000027.json  000000028.json  000000029.json  000000030.json  000000031.json  000000032.json  000000033.json  000000034.json  000000035.json  000000036.json  000000037.json  000000038.json  000000039.json  000000040.json  (+13 more)
nike-crawler/storage/request_queues/default/: 00YRG8KSsLel9WK.json  00swLKfuFOrfmOx.json  07gjMRHfpkLVE4v.json  0CM4EPvc4uSe0Cd.json  0FVRid3BYCtJFiz.json  0PELYq5msfQ1HIA.json  0XqTHd7O6FAqcnk.json  0c9fIfCaNQSHM1L.json  0fIhtCrmhCapDVM.json  0i3SIGcqt04IyYH.json  0i3kfwCO6yqwKq3.json  0v94cu44zncVqUl.json  0zNfgQ6VAmoCXEA.json  13U3TL3jWzcpQvN.json  16y2tEb2NqBkwrQ.json  17xO3mURqJ6I3Dq.json  1864uoH9WYGWTpP.json  1gdbfEi4VJRCwFM.json  1joIxlODNpMq3NV.json  1nVodrNywqwBaXl.json  1qRTkICOzpGRNrQ.json  1v29WvF71QI7PL8.json  21q0xhbCgmaAF8O.json  25l8uPBjOw58sCu.json  29qnbVTsdJDbI4P.json  2EDLp29K1yK5GhG.json  (+587 more)
